--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -17,7 +17,7 @@
 
     <div *ngIf="loggedIn()" class="dropdown">
       <a class="dropdown-toggle text-light">
-        Bem Vindo x
+        Bem Vindo {{authService.decodedToken?.unique_name | titlecase}}
       </a>
     
       <div class="dropdown-menu">
