--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,6 +1,7 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Our Dating</a>
-    <ul class="navbar-nav mr-auto">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand" href="#">Our Dating</a>
+    <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Matches</a>
       </li>
@@ -10,26 +11,51 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Mensagens</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" (click)="logout()">Sair</a>
-      </li>
     </ul>
 
-    <div *ngIf="loggedIn()" class="dropdown">
-      <a class="dropdown-toggle text-light">
-        Bem Vindo {{authService.decodedToken?.unique_name | titlecase}}
+    <div *ngIf="loggedIn()" class="dropdown" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>
+        Bem Vindo {{ authService.decodedToken?.unique_name | titlecase }}
       </a>
-    
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Editar Perfil</a>
+
+      <div class="dropdown-menu mt-2" *dropdownMenu>
+        <a class="dropdown-item" href="#"
+          ><i class="fa fa-user mr-2"></i>Editar Perfil</a
+        >
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Sair</a>
+        <a class="dropdown-item" href="#" (click)="logout()"><i class="fa fa-sign-out mr-2"></i>Sair</a>
       </div>
     </div>
 
-    <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
-      <input class="form-control mr-sm-2" type="text" name="username" placeholder="Usuário" [(ngModel)]="model.username" required>
-      <input class="form-control mr-sm-2" type="password" name="password" placeholder="Senha" [(ngModel)]="model.password" required>
-      <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+    <form
+      *ngIf="!loggedIn()"
+      #loginForm="ngForm"
+      class="form-inline my-2 my-lg-0"
+      (ngSubmit)="login()"
+    >
+      <input
+        class="form-control mr-sm-2"
+        type="text"
+        name="username"
+        placeholder="Usuário"
+        [(ngModel)]="model.username"
+        required
+      />
+      <input
+        class="form-control mr-sm-2"
+        type="password"
+        name="password"
+        placeholder="Senha"
+        [(ngModel)]="model.password"
+        required
+      />
+      <button
+        [disabled]="!loginForm.valid"
+        class="btn btn-info my-2 my-sm-0"
+        type="submit"
+      >
+        Login
+      </button>
     </form>
+  </div>
 </nav>
