--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">Our Dating</a>
+    <a class="navbar-brand" [routerLink]="['/home']">Our Dating</a>
     <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Matches</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/matches']">Matches</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pessoas</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/pessoas']">Pessoas</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Mensagens</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/mensagens']">Mensagens</a>
       </li>
     </ul>
 
