--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -1,6 +1,9 @@
 <div class="container mt-4">
   <div class="row">
-    <div class="col-sm-4">
+    <h1 class="ml-3">{{user.knowAs}}</h1>
+  </div>
+  <div class="row">
+    <div class="col-sm-4 mb-3">
       <div class="card">
         <img
           class="card-img-top img-thumbnail"
@@ -47,7 +50,7 @@
             <p>{{ user.interests }}</p>
           </tab>
           <tab heading="Fotos">
-            <p>Fotos aq</p>
+            <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
           </tab>
           <tab heading="Mensagens">
             <p>Mensagens aq</p>
