--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -14,14 +14,15 @@
     </ul>
 
     <div *ngIf="loggedIn()" class="dropdown" dropdown>
+        <span class="mr-1">
+            <img src="{{photoUrl}}" alt="">
+          </span>
       <a class="dropdown-toggle text-light" dropdownToggle>
         Bem Vindo {{ authService.decodedToken?.unique_name | titlecase }}
       </a>
 
       <div class="dropdown-menu mt-2" *dropdownMenu>
-        <a class="dropdown-item" href="#"
-          ><i class="fa fa-user mr-2"></i>Editar Perfil</a
-        >
+        <a class="dropdown-item" [routerLink]="['/member/edit']"><i class="fa fa-user mr-2"></i>Editar Perfil</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="#" (click)="logout()"><i class="fa fa-sign-out mr-2"></i>Sair</a>
       </div>
