--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -1,11 +1,11 @@
 <div class="container mt-4">
   <div class="row">
     <div class="col-sm-4">
-        <h1>Your Profile</h1>
+        <h1>Seu perfil</h1>
     </div>
     <div class="col-sm-8">
-      <div *ngIf="editForm.dirty" class="alert alert-info">
-        <strong>Information:</strong> You have made changes.  Any unsaved changes will be lost!
+      <div *ngIf="editForm.dirty" class="alert alert-warning">
+        <strong>Informação:</strong> Você fez alterações no seu perfil, salve-as para não perde-las
       </div>
     </div>
   </div>
@@ -15,54 +15,54 @@
         <img class="card-img-top img-thumbnail" src="{{photoUrl}}" alt="{{user.knowAs}}">
         <div class="card-body">
           <div>
-            <strong>Location:</strong>
+            <strong>Localização:</strong>
             <p>{{user.city}}, {{user.country}}</p>
           </div>
           <div>
-            <strong>Age:</strong>
+            <strong>Idade:</strong>
             <p>{{user.age}}</p>
           </div>
           <div>
-            <strong>Last Active:</strong>
+            <strong>Visto por último:</strong>
             <p>{{user.lastActive}}</p>
           </div>
           <div>
-            <strong>Member Since:</strong>
+            <strong>Membro desde:</strong>
             <p>{{user.created}}</p>
           </div>
         </div>
         <div class="card-footer">
-            <button [disabled]="!editForm.dirty" form="editForm" class="btn btn-success btn-block">Save Changes</button>
+            <button [disabled]="!editForm.dirty" form="editForm" class="btn btn-success btn-block">Salvar alterações</button>
         </div>
       </div>
     </div>
     <div class="col-sm-8">
       <div class="tab-panel">
         <tabset class="member-tabset">
-          <tab heading="Edit Profile">
+          <tab heading="Editar perfil">
 
-            <form #editForm="ngForm" id="editForm" (ngSubmit)="updateUser()">
-                <h4>Description</h4>
-                <textarea class="form-control" name="introduction" rows="6" 
-                  [(ngModel)]="user.introduction"></textarea>
-                <h4>Looking For</h4>
-                <textarea class="form-control" name="lookingFor" rows="6" 
-                  [(ngModel)]="user.lookingFor"></textarea>
-                  <h4>Interests</h4>
-                  <textarea class="form-control" name="interests" rows="6" 
-                    [(ngModel)]="user.interests"></textarea>
-                  <h4>Location Details:</h4>
-                <div class="form-inline">
-                  <label for="city">City</label>
-                  <input type="text" class="form-control" name="city" [(ngModel)]="user.city">
-                  <label for="country">City</label>
-                  <input type="text" class="form-control" name="country" [(ngModel)]="user.country">
-                </div>
+              <form #editForm="ngForm" id="editForm" (ngSubmit)="updateUser()">
+                  <h4>Descrição</h4>
+                  <textarea class="form-control" name="introduction" rows="6" 
+                    [(ngModel)]="user.introduction"></textarea>
+                  <h4>Procurando </h4>
+                  <textarea class="form-control" name="lookingFor" rows="6" 
+                    [(ngModel)]="user.lookingFor"></textarea>
+                    <h4>Interesses</h4>
+                    <textarea class="form-control" name="interests" rows="6" 
+                      [(ngModel)]="user.interests"></textarea>
+                    <h4>Localização:</h4>
+                  <div class="form-inline">
+                    <label for="city" class="mr-1">Cidade:</label>
+                    <input type="text" class="form-control" name="city" [(ngModel)]="user.city">
+                    <label for="country" class=" ml-2 mr-1">País:</label>
+                    <input type="text" class="form-control" name="country" [(ngModel)]="user.country">
+                  </div>
 
-            </form>
+              </form>
 
           </tab>
-          <tab heading="Edit Photos">
+          <tab heading="Editar fotos">
             <app-photo-editor [photos]="user.photos" 
             (getMemberPhotoChange)="updateMainPhoto($event)"></app-photo-editor>
           </tab>
