--- a/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
+++ b/DatingApp-SPA/src/app/members/photo-editor/photo-editor.component.html
@@ -1,11 +1,11 @@
 <div class="row">
-  <div class="col-sm-2" *ngFor="let photo of photos">
+  <div class="col-sm-3" *ngFor="let photo of photos">
     <img src="{{photo.url}}" class="img-thumbnail p-1" alt="">
     <div class="text-center">
-      <button type="button" class="btn btn-sm mr-1" 
+      <button type="button" class="btn btn-sm" 
         [ngClass]="photo.isMain ? 'btn-success active' : 'btn-secondary'"
         (click)="setMainPhoto(photo)" 
-        [disabled]="photo.isMain">Main</button>
+        [disabled]="photo.isMain">Principal</button>
       <button type="button" class="btn btn-sm btn-danger" 
         [disabled]="photo.isMain"
         (click)="deletePhoto(photo.id)"><i class="fa fa-trash-o"></i></button>
@@ -17,7 +17,7 @@
 
     <div class="col-md-3">
 
-        <h3>Add Photos</h3>
+        <h3>Adicionar fotos</h3>
 
         <div ng2FileDrop
              [ngClass]="{'nv-file-over': hasBaseDropZoneOver}"
@@ -25,20 +25,20 @@
              [uploader]="uploader"
              class="card bg-faded p-3 text-center mb-3 my-drop-zone">
              <i class="fa fa-upload fa-3x"></i>
-            Drop Photos Here
+            Arraste suas fotos aqui
         </div>
 
-        Multiple
+        Multiplas
         <input type="file" ng2FileSelect [uploader]="uploader" multiple  /><br/>
 
-        Single
+        Única
         <input type="file" ng2FileSelect [uploader]="uploader" />
     </div>
 
     <div class="col-md-9" style="margin-bottom: 40px" *ngIf="uploader?.queue?.length">
 
-        <h3>Upload queue</h3>
-        <p>Queue length: {{ uploader?.queue?.length }}</p>
+        <h3>Fila de upload</h3>
+        <p>Tamanho da fila: {{ uploader?.queue?.length }}</p>
 
         <table class="table">
             <thead>
@@ -68,11 +68,11 @@
             </button>
             <button type="button" class="btn btn-warning btn-s"
                     (click)="uploader.cancelAll()" [disabled]="!uploader.isUploading">
-                <span class="fa fa-ban"></span> Cancel
+                <span class="fa fa-ban"></span> Cancelar
             </button>
             <button type="button" class="btn btn-danger btn-s"
                     (click)="uploader.clearQueue()" [disabled]="!uploader.queue.length">
-                <span class="fa fa-trash"></span> Remove
+                <span class="fa fa-trash"></span> Remover
             </button>
         </div>
 
