Cadastro de novos usuários

--- a/DatingApp-SPA/src/styles.css
+++ b/DatingApp-SPA/src/styles.css
@@ -1,12 +1,10 @@
-/*
-    Chamar o bootstrap, bootswatch e font-awesome para a aplicação
-*/
+/*Importar estilos*/
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 @import '../node_modules/font-awesome/css/font-awesome.min.css';
 @import '../node_modules/bootswatch/dist/pulse/bootstrap.min.css';
-/* css do alertifyjs */
 @import '../node_modules/alertifyjs/build/css/alertify.min.css';
 @import '../node_modules/alertifyjs/build/css/themes/bootstrap.min.css';
+@import '../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css';
 
 
 /* CSS da pagina de um membro específico */
