--- a/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp-SPA/src/app/register/register.component.html
@@ -1,18 +1,91 @@
-<form #registerForm="ngForm" (ngSubmit)="register()">
+<form [formGroup]="registerForm" (ngSubmit)="register()">
   <h2 class="text-center text-primary">Registrar</h2>
   <hr>
 
   <div class="form-group">
-    <input type="text" class="form-control" required name="user" [(ngModel)]="model.username" placeholder="Usuário">
+    <label class="control-label mr-4">Eu sou: </label>
+    <label class="radio-inline">
+      <input class="mr-3" type="radio" value="male" formControlName="gender">Masculino
+    </label>
+    <label class="radio-inline ml-3">
+      <input class="mr-3" type="radio" value="female" formControlName="gender">Feminino
+    </label>
   </div>
 
   <div class="form-group">
-    <input type="password" class="form-control" required  [(ngModel)]="model.password" name="password" placeholder="Senha">
+    <input [ngClass]="{'is-invalid': registerForm.get('username').errors && registerForm.get('username').touched}"
+      type="text" class="form-control" formControlName="username" placeholder="Usuário">
+    <div class="invalid-feedback">Escolha um nome de usuário</div>
+  </div>
+
+  <div class="form-group">
+    <input [ngClass]="{'is-invalid': registerForm.get('knowAs').errors && registerForm.get('knowAs').touched}"
+      class="form-control" placeholder="Conhecido como" formControlName="knowAs">
+    <div class="invalid-feedback"
+      *ngIf="registerForm.get('knowAs').touched && registerForm.get('knowAs').hasError('required')">Preencha este campo
+    </div>
+  </div>
+
+  <div class="form-group">
+    <input [ngClass]="{'is-invalid': registerForm.get('dateOfBirth').errors && registerForm.get('dateOfBirth').touched}"
+      class="form-control" placeholder="Data de nascimento" formControlName="dateOfBirth" type="text" bsDatepicker [bsConfig]="bsConfig">
+    <div class="invalid-feedback"
+      *ngIf="registerForm.get('dateOfBirth').touched && registerForm.get('dateOfBirth').hasError('required')">Preencha
+      a data de nascimento</div>
+  </div>
+
+  <div class="form-group">
+    <input [ngClass]="{'is-invalid': registerForm.get('city').errors && registerForm.get('city').touched}"
+      class="form-control" placeholder="City" formControlName="city">
+    <div class="invalid-feedback"
+      *ngIf="registerForm.get('city').touched && registerForm.get('city').hasError('required')">Preencha este campo
+    </div>
+  </div>
+
+  <div class="form-group">
+    <input [ngClass]="{'is-invalid': registerForm.get('country').errors && registerForm.get('country').touched}"
+      class="form-control" placeholder="Country" formControlName="country">
+    <div class="invalid-feedback"
+      *ngIf="registerForm.get('country').touched && registerForm.get('country').hasError('required')">Preencha este
+      campo</div>
+  </div>
+
+  <div class="form-group">
+    <input [ngClass]="{'is-invalid': registerForm.get('password').errors && registerForm.get('password').touched}"
+      type="password" class="form-control" formControlName="password" placeholder="Senha">
+    <div class="invalid-feedback"
+      *ngIf="registerForm.get('password').hasError('required') && registerForm.get('password').touched">
+      Escolha uma senha
+    </div>
+    <div class="invalid-feedback"
+      *ngIf="registerForm.get('password').hasError('minlength') && registerForm.get('password').touched">
+      Senha deverá conter no mínimo 4 caracteres.
+    </div>
+    <div class="invalid-feedback"
+      *ngIf="registerForm.get('password').hasError('maxlength') && registerForm.get('password').touched">
+      Senha deverá conter no máximo 8 caracteres.
+    </div>
+  </div>
+
+  <div class="form-group">
+    <input [ngClass]="{'is-invalid': registerForm.get('confirmPassword').errors 
+        && registerForm.get('confirmPassword').touched
+        || registerForm.get('confirmPassword').touched
+        && registerForm.hasError('mismatch')}" type="password" class="form-control" formControlName="confirmPassword"
+      placeholder="Confirm Password">
+    <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword').hasError('required') 
+        && registerForm.get('confirmPassword').touched">
+      Confirme a senha
+    </div>
+    <div class="invalid-feedback" *ngIf="registerForm.hasError('mismatch') 
+      && registerForm.get('confirmPassword').touched">
+      Senhas devem ser iguais
+    </div>
   </div>
 
   <div class="form-group text-center">
-    <button class="btn btn-success mr-2" type="submit">Registrar</button>
+    <button [disabled]="!registerForm.valid" class="btn btn-success mr-2" type="submit">Registrar</button>
     <button class="btn btn-default" type="button" (click)="cancel()">Cancelar</button>
   </div>
-  
+
 </form>
