--- a/DatingApp-SPA/src/app/members/member-list/member-list.component.html
+++ b/DatingApp-SPA/src/app/members/member-list/member-list.component.html
@@ -1,3 +1,36 @@
+<div class="text-center mt-3">
+  <h3>Seus matches - {{pagination.totalItems}} encontrados</h3>
+</div>
+<div class="container">
+  <form class="form-inline" #form="ngForm" (ngSubmit)="loadUsers()" novalidate>
+    <div class="form-group p-2">
+      <label for="minAge">Idade mínima</label>
+      <input type="number" class="form-control ml-1" style="width: 70px" [(ngModel)]="userParams.minAge" id="minAge"
+        name="minAge">
+    </div>
+
+    <div class="form-group p-2">
+      <label for="maxAge">Idade máxima</label>
+      <input type="number" class="form-control ml-1" style="width: 70px" [(ngModel)]="userParams.maxAge" id="maxAge"
+        name="maxAge">
+    </div>
+    <div>
+      <button type="submit" class="btn btn-primary ml-2">Aplicar filtros</button>
+      <button type="button" (click)="resetFilters()" class="btn btn-info ml-2">Resetar filtros</button>
+    </div>
+    <div class="col">
+      <div class="btn-group float-right">
+        <button type="button" name="orderBy" class="btn btn-primary"
+                [(ngModel)]="userParams.orderBy" (click)="loadUsers()"
+                btnRadio="lastActive">Visto por último</button>
+        <button type="button" name="orderBy" class="btn btn-primary"
+                [(ngModel)]="userParams.orderBy" (click)="loadUsers()"
+                btnRadio="created">Novos membros</button>
+      </div>
+    </div>
+  </form>
+</div>
+
 <div class="container mt-5">
   <div class="row">
     <div *ngFor="let user of users" class="col-lg-2 col-md-3 col-sm-6">
@@ -7,12 +40,9 @@
 </div>
 
 <div class="d-flex justify-content-center">
-  <pagination [boundaryLinks]="true"
-              [totalItems]="pagination.totalItems"
-              [itemsPerPage]="pagination.itemsPerPage"
-              [(ngModel)]="pagination.currentPage"
-              (pageChanged)="pageChanged($event)"
-     previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+  <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
+    [(ngModel)]="pagination.currentPage" (pageChanged)="pageChanged($event)" previousText="&lsaquo;" nextText="&rsaquo;"
+    firstText="&laquo;" lastText="&raquo;">
 
   </pagination>
 </div>
