--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -6,7 +6,7 @@
         <a class="nav-link" [routerLink]="['/matches']">Matches</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/pessoas']">Pessoas</a>
+        <a class="nav-link" [routerLink]="['/likes']">Pessoas</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/mensagens']">Mensagens</a>
