--- a/DatingApp-SPA/src/app/members/member-list/member-list.component.html
+++ b/DatingApp-SPA/src/app/members/member-list/member-list.component.html
@@ -20,7 +20,8 @@
     </div>
     <div class="col">
       <div class="btn-group float-right">
-        <button type="button" name="orderBy" class="btn btn-primary"
+        <label for="orderBy">Ordenar: </label>
+        <button type="button" name="orderBy" class="btn btn-primary ml-1 mr-1"
                 [(ngModel)]="userParams.orderBy" (click)="loadUsers()"
                 btnRadio="lastActive">Visto por último</button>
         <button type="button" name="orderBy" class="btn btn-primary"
