--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -31,14 +31,14 @@
         <div class="card-footer">
           <div class="btn-group d-flex">
             <button class="btn btn-primary w-100 mr-1">Like</button>
-            <button class="btn btn-info w-100 ml-1">Mensagem</button>
+            <button class="btn btn-info w-100 ml-1" (click)="selectTab(3)">Mensagem</button>
           </div>
         </div>
       </div>
     </div>
     <div class="col-sm-8">
       <div class="tab-panel">
-        <tabset class="member-tabset">
+        <tabset class="member-tabset" #memberTabs>
           <tab heading="Sobre {{ user.knowAs }}">
             <h4>Descrição</h4>
             <p>{{ user.introduction }}</p>
@@ -53,7 +53,7 @@
             <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
           </tab>
           <tab heading="Mensagens">
-            <p>Mensagens aq</p>
+            <app-member-messages [recipientId]="user.id"></app-member-messages>
           </tab>
         </tabset>
       </div>
